add func to baseline notebook

--- a/regressor.ipynb
+++ b/regressor.ipynb
@@ -289,6 +289,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attention layer\n",
+    "class AttentionPooling(nn.Module):\n",
+    "    def __init__(self, in_dim):\n",
+    "        super().__init__()\n",
+    "        self.attention = nn.Sequential(\n",
+    "        nn.Linear(in_dim, in_dim),\n",
+    "        nn.LayerNorm(in_dim),\n",
+    "        nn.GELU(),\n",
+    "        nn.Linear(in_dim, 1),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, last_hidden_state, attention_mask):\n",
+    "        w = self.attention(last_hidden_state).float()\n",
+    "        w[attention_mask==0]=float('-inf')\n",
+    "        w = torch.softmax(w,1)\n",
+    "        attention_embeddings = torch.sum(w * last_hidden_state, dim=1)\n",
+    "        return attention_embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -526,7 +551,6 @@
     "# train for folds\n",
     "best_scores = []\n",
     "for fold_id in range(cfg.n_fold):\n",
-    "    print(f\"========== fold: {fold_id} training ==========\")\n",
     "    fold_train = train_df[train_df['fold'] != fold_id].reset_index(drop=True)\n",
     "    fold_valid = train_df[train_df['fold'] == fold_id].reset_index(drop=True)\n",
     "\n",
@@ -543,10 +567,20 @@
     "        test_samples=None,\n",
     "        device=cfg.device\n",
     "    )\n",
-    "    \n",
+    "    trainer.logger.info(f\"========== fold: {fold_id} training ==========\")\n",
     "    trainer.fit()\n",
     "    best_scores.append(trainer.best_score)\n",
     "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.logger.info(f\"best scores={best_scores}\")\n",
+    "trainer.logger.info(f\"cv score={np.mean(best_scores)}\")"
    ]
   }
  ],
