--- a/regressor.ipynb
+++ b/regressor.ipynb
@@ -83,7 +83,7 @@
    ],
    "source": [
     "# change cfg \n",
-    "cfg.device = 'cpu'\n",
+    "cfg.device = 'cuda'\n",
     "cfg.data_dir = './data/fb3'\n",
     "cfg.save_dir = './outputs'\n",
     "cfg.max_len = 768\n",
@@ -97,14 +97,14 @@
     "cfg.seed = 42\n",
     "cfg.n_fold = 4\n",
     "\n",
-    "cfg.layerwise_lr = 5e-5\n",
+    "cfg.layerwise_lr = 2e-5\n",
     "cfg.layerwise_lr_decay = 0.9\n",
     "cfg.layerwise_weight_decay = 0.01\n",
     "cfg.layerwise_adam_epsilon = 1e-6\n",
     "cfg.layerwise_use_bertadam = False\n",
     "\n",
     "cfg.reinit = True\n",
-    "cfg.reinit_n = 2\n",
+    "cfg.reinit_n = 1\n",
     "\n",
     "cfg.fgm = False\n",
     "\n",
