update baseline notebook

--- a/regressor.ipynb
+++ b/regressor.ipynb
@@ -91,7 +91,7 @@
     "cfg.epoch = 5\n",
     "cfg.num_cycles = 1.0\n",
     "cfg.encoder_lr = 2e-5\n",
-    "cfg.decoder_lr = 2e-5\n",
+    "cfg.decoder_lr = 5e-5\n",
     "cfg.warmup_ratio = 0.0\n",
     "cfg.criterion = 'l1'\n",
     "cfg.seed = 42\n",
@@ -327,6 +327,7 @@
     "    ):\n",
     "        BaselineRegressor.__init__(self, cfg, cfg_path, use_pretrained)\n",
     "        self.weighted_pool = WeightedLayerPooling(self.model_config.num_hidden_layers, 4, None)\n",
+    "        #self._init_weights(self.fc)\n",
     "    \n",
     "    def forward(self, inputs: torch.Tensor, attention_mask: torch.Tensor) -> torch.Tensor:\n",
     "        last_hidden_state = self.transformer(input_ids=inputs, attention_mask=attention_mask)\n",
@@ -335,28 +336,38 @@
     "        out = self.fc(features)\n",
     "        return out\n",
     "    \n",
+    "\n",
     "    def get_optimizer(self):\n",
     "        no_decay = [\"bias\", \"LayerNorm.weight\"]\n",
     "        # initialize lr for task specific layer\n",
     "        optimizer_grouped_parameters = [{\"params\": [p for n, p in self.named_parameters() if \"transformer\" not in n],\n",
-    "                                                \"weight_decay\": 0.0,\n",
-    "                                                \"lr\": self.cfg.layerwise_lr,\n",
-    "                                                },]\n",
+    "                                            \"weight_decay\": 0.0,\n",
+    "                                            \"lr\": self.cfg.decoder_lr,\n",
+    "                                        },]\n",
+    "        # initialize lr for extra params in encoder\n",
+    "        extra_params = [(n,p) for n, p in self.named_parameters() if \"transformer\" in n and \"transformer.embeddings\" not in n and \"transformer.encoder.layer\" not in n]\n",
+    "        optimizer_grouped_parameters += [{\"params\": [p for n, p in extra_params if not any(nd in n for nd in no_decay)],\n",
+    "                                            \"weight_decay\": self.cfg.layerwise_weight_decay,\n",
+    "                                            \"lr\": self.cfg.layerwise_lr,\n",
+    "                                        },]\n",
+    "        optimizer_grouped_parameters += [{\"params\": [p for n, p in extra_params if any(nd in n for nd in no_decay)],\"weight_decay\": 0.0,\n",
+    "                                            \"lr\": self.cfg.layerwise_lr,\n",
+    "                                        },]\n",
     "        # initialize lrs for every layer\n",
     "        layers = [self.transformer.embeddings] + list(self.transformer.encoder.layer)\n",
     "        layers.reverse()\n",
     "        lr = self.cfg.layerwise_lr\n",
     "        for layer in layers:\n",
     "            optimizer_grouped_parameters += [{\"params\": [p for n, p in layer.named_parameters() if not any(nd in n for nd in no_decay)],\n",
-    "                                              \"weight_decay\": self.cfg.layerwise_weight_decay,\n",
-    "                                              \"lr\": lr,\n",
-    "                                              },\n",
-    "                                              {\"params\": [p for n, p in layer.named_parameters() if any(nd in n for nd in no_decay)],\n",
-    "                                              \"weight_decay\": 0.0,\n",
-    "                                              \"lr\": lr,\n",
-    "                                              },]\n",
+    "                                                \"weight_decay\": self.cfg.layerwise_weight_decay,\n",
+    "                                                \"lr\": lr,\n",
+    "                                                },\n",
+    "                                                {\"params\": [p for n, p in layer.named_parameters() if any(nd in n for nd in no_decay)],\n",
+    "                                                \"weight_decay\": 0.0,\n",
+    "                                                \"lr\": lr,\n",
+    "                                                },]\n",
     "            lr *= self.cfg.layerwise_lr_decay\n",
-    "        \n",
+    "            \n",
     "        return AdamW(optimizer_grouped_parameters,\n",
     "                            lr = self.cfg.layerwise_lr,\n",
     "                            eps = self.cfg.layerwise_adam_epsilon,\n",
