update pseudo notbook

--- a/regressor-pseudo.ipynb
+++ b/regressor-pseudo.ipynb
@@ -736,7 +736,8 @@
     "        test_samples=None,\n",
     "        device=cfg.device\n",
     "    )\n",
-    "    pseudo_labels_trainer.logger.info(f\"========== fold: {fold_id} training ==========\")\n",
+    "    pseudo_labels_trainer.logger.info(f\"========== fold: {fold_id} training pseudo==========\")\n",
+    "    pseudo_labels_trainer.fit()\n",
     "\n",
     "    cfg.epoch = 5\n",
     "    trainer = FGM_Trainer(\n",
@@ -748,6 +749,7 @@
     "        test_samples=None,\n",
     "        device=cfg.device\n",
     "    )\n",
+    "    trainer.logger.info(f\"========== fold: {fold_id} training true==========\")\n",
     "    trainer.fit()\n",
     "\n",
     "    best_scores.append(trainer.best_score)\n",
@@ -770,7 +772,10 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "trainer.logger.info(f\"best scores={best_scores}\")\n",
+    "trainer.logger.info(f\"cv score={np.mean(best_scores)}\")"
+   ]
   },
   {
    "cell_type": "code",
