--- a/regressor-pseudo copy.ipynb
+++ b/regressor-pseudo copy.ipynb
@@ -17,31 +17,31 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: iterative-stratification==0.1.7 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (0.1.7)\n",
-      "Requirement already satisfied: numpy in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from iterative-stratification==0.1.7) (1.23.1)\n",
       "Requirement already satisfied: scikit-learn in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from iterative-stratification==0.1.7) (1.1.1)\n",
+      "Requirement already satisfied: numpy in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from iterative-stratification==0.1.7) (1.23.1)\n",
       "Requirement already satisfied: scipy in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from iterative-stratification==0.1.7) (1.9.1)\n",
       "Requirement already satisfied: joblib>=1.0.0 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from scikit-learn->iterative-stratification==0.1.7) (1.1.0)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from scikit-learn->iterative-stratification==0.1.7) (2.2.0)\n",
       "Requirement already satisfied: transformers in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (4.18.0)\n",
-      "Requirement already satisfied: sacremoses in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (0.0.43)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (21.3)\n",
-      "Requirement already satisfied: numpy>=1.17 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (1.23.1)\n",
-      "Requirement already satisfied: requests in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (2.28.1)\n",
-      "Requirement already satisfied: tokenizers!=0.11.3,<0.13,>=0.11.1 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (0.11.4)\n",
       "Requirement already satisfied: filelock in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (3.6.0)\n",
       "Requirement already satisfied: huggingface-hub<1.0,>=0.1.0 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (0.2.1)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (2022.7.9)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages/PyYAML-6.0-py3.10-macosx-11.1-arm64.egg (from transformers) (6.0)\n",
       "Requirement already satisfied: tqdm>=4.27 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (4.64.0)\n",
+      "Requirement already satisfied: sacremoses in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (0.0.43)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (2022.7.9)\n",
+      "Requirement already satisfied: requests in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (2.28.1)\n",
+      "Requirement already satisfied: tokenizers!=0.11.3,<0.13,>=0.11.1 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (0.11.4)\n",
+      "Requirement already satisfied: numpy>=1.17 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (1.23.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages/PyYAML-6.0-py3.10-macosx-11.1-arm64.egg (from transformers) (6.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from transformers) (21.3)\n",
       "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.1.0->transformers) (4.3.0)\n",
       "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from packaging>=20.0->transformers) (3.0.9)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from requests->transformers) (1.26.11)\n",
       "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from requests->transformers) (2.0.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from requests->transformers) (1.26.11)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from requests->transformers) (3.3)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from requests->transformers) (2022.9.24)\n",
-      "Requirement already satisfied: six in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from sacremoses->transformers) (1.16.0)\n",
       "Requirement already satisfied: joblib in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from sacremoses->transformers) (1.1.0)\n",
       "Requirement already satisfied: click in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from sacremoses->transformers) (8.0.4)\n",
+      "Requirement already satisfied: six in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (from sacremoses->transformers) (1.16.0)\n",
       "Requirement already satisfied: sentencepiece in /Users/zhenyishen/opt/miniconda3/envs/pytorch/lib/python3.10/site-packages (0.1.97)\n"
      ]
     },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,16 +600,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pseudo_labels = np.load(cfg.pseudo_labels_path)"
+    "pseudo_labels = np.load(cfg.pseudo_labels_path)\n",
+    "pseudo_labels_pseudomodel = np.load('data/fb3/3090_768_pseudo_only5.npy')\n",
+    "pseudo_labels_bestsingle = np.load('data/fb3/3090_768_4attentions_for_last4hiddens_then_cat_2fcs(equal_hidden)_init_lldr.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -628,6 +630,8 @@
     "best_scores = []\n",
     "gts = []\n",
     "oofs = []\n",
+    "oofs_pseudomodel = []\n",
+    "oofs_singlemodel = []\n",
     "texts = []\n",
     "prev_oof_idx = 0\n",
     "for fold_id in range(cfg.n_fold):\n",
@@ -636,6 +640,8 @@
     "    gts.append(fold_valid[cfg.target_columns].values)\n",
     "    cur_len = len(fold_valid)\n",
     "    oofs.append(pseudo_labels[prev_oof_idx:prev_oof_idx+cur_len])\n",
+    "    oofs_pseudomodel.append(pseudo_labels_pseudomodel[prev_oof_idx:prev_oof_idx+cur_len])\n",
+    "    oofs_singlemodel.append(pseudo_labels_bestsingle[prev_oof_idx:prev_oof_idx+cur_len])\n",
     "    prev_oof_idx += cur_len\n",
     "    texts.append(fold_valid['full_text'].values)\n",
     "    print(prev_oof_idx, cur_len)"
@@ -643,7 +649,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4440603285745613\n",
+      "[0.47204313 0.43728686 0.40764142 0.44875043 0.46161556 0.43702458]\n",
+      "0.45057676198238217\n",
+      "[0.48433795 0.4412542  0.41268818 0.44827752 0.46811897 0.44878375]\n",
+      "0.455143275584082\n",
+      "[0.47812447 0.44896455 0.41229445 0.46441552 0.4760855  0.45097516]\n",
+      "0.44285064854169187\n",
+      "[0.47827017 0.44214341 0.40891533 0.43483823 0.46221417 0.43072258]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mcrmse(targets: np.array, predictions: np.array) -> Tuple[np.float32, List[np.float32]]:\n",
+    "    rms_scores = np.sqrt(np.mean(np.square(targets - predictions), axis=0))\n",
+    "    return np.mean(rms_scores, axis=0)\n",
+    "\n",
+    "def rmse_scores(targets: np.array, predictions: np.array) -> Tuple[np.float32, List[np.float32]]:\n",
+    "    rms_scores = np.sqrt(np.mean(np.square(targets - predictions), axis=0))\n",
+    "    return rms_scores\n",
+    "\n",
+    "for oof, gt in zip(oofs, gts):\n",
+    "    print(mcrmse(gt, oof))\n",
+    "    print(rmse_scores(gt, oof))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,19 +700,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.7224693 2.6182752 2.8968425 2.7458382 2.4491014 2.6532686]\n",
-      "[2.5 2.5 3.  2.  2.  2.5]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "fold_train_text_pseudo, fold_train_oofs_pseudo = join_folds(texts, oofs, exclud_fold=0)\n",
+    "fold_valid = train_df[train_df['fold'] == 0].reset_index(drop=True)['full_text']\n",
+    "\n",
+    "oof_text = (set(fold_train_text_pseudo))\n",
+    "i = 0\n",
+    "for l in fold_valid:\n",
+    "    if l in oof_text:\n",
+    "        i+=1\n",
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.5, 2.5, 3. , 2. , 2. , 2.5])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fold_valid"
+   ]
   },
   {
    "cell_type": "code",
