--- a/regressor-pseudo copy.ipynb
+++ b/regressor-pseudo copy.ipynb
@@ -649,7 +649,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.  3.5 3.5 3.5 3.5 3. ]\n",
+      "[3.3825157 3.1939368 3.2406125 3.2284293 3.3531332 3.103599 ]\n",
+      "[3.3925588 3.2325106 3.304086  3.2678955 3.3593218 3.1513677]\n",
+      "[3.376724  3.2043858 3.206801  3.2375991 3.358189  3.0836837]\n",
+      "0.46345096268726627\n",
+      "0.45808779697189744\n",
+      "0.4642911360463105\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gts[0][2])\n",
+    "print(oofs[0][2])\n",
+    "print(oofs_pseudomodel[0][2])\n",
+    "print(oofs_singlemodel[0][2])\n",
+    "\n",
+    "print(mcrmse(gts[0][:30], oofs[0][:30]))\n",
+    "print(mcrmse(gts[0][:30], oofs_pseudomodel[0][:30]))\n",
+    "print(mcrmse(gts[0][:30], oofs_singlemodel[0][:30]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
