--- a/regressor-pseudo.ipynb
+++ b/regressor-pseudo.ipynb
@@ -130,7 +130,7 @@
     "cfg.device = 'cuda'\n",
     "cfg.data_dir = './data/fb3'\n",
     "cfg.save_dir = './outputs'\n",
-    "cfg.pseudo_labels_path = './data/fb3/ensemble_oof.npy'\n",
+    "cfg.pseudo_labels_path = './data/fb3/3090_768_4attentions_for_last4hiddens_then_cat_2fcs(equal_hidden)_init_lldr.npy'\n",
     "cfg.max_len = 768\n",
     "cfg.gradient_checkpointing = True\n",
     "cfg.epoch = 5\n",
@@ -371,15 +371,9 @@
     "        use_pretrained: bool = None\n",
     "    ):\n",
     "        BaselineRegressor.__init__(self, cfg, cfg_path, use_pretrained)\n",
-    "        self.weighted_pool = WeightedLayerPooling(self.model_config.num_hidden_layers, 4, None)\n",
+    "        #self.weighted_pool = WeightedLayerPooling(self.model_config.num_hidden_layers, 4, None)\n",
     "        #self._init_weights(self.fc)\n",
-    "    \n",
-    "    def forward(self, inputs: torch.Tensor, attention_mask: torch.Tensor) -> torch.Tensor:\n",
-    "        last_hidden_state = self.transformer(input_ids=inputs, attention_mask=attention_mask)\n",
-    "        features = self.weighted_pool(last_hidden_state[1])\n",
-    "        features = self.pool(features, attention_mask)\n",
-    "        out = self.fc(features)\n",
-    "        return out\n",
+    "\n",
     "    \n",
     "\n",
     "    def get_optimizer(self):\n",
@@ -722,7 +716,7 @@
     "    if cfg.reinit:\n",
     "        model = re_initializing_layer(model, model.model_config, cfg.reinit_n)\n",
     "    \n",
-    "    cfg.epoch = 2\n",
+    "    cfg.epoch = 5\n",
     "    pseudo_labels_trainer = FGM_Trainer(\n",
     "        cfg=cfg,\n",
     "        model=model,\n",
@@ -735,6 +729,7 @@
     "    pseudo_labels_trainer.logger.info(f\"========== fold: {fold_id} training pseudo==========\")\n",
     "    pseudo_labels_trainer.fit()\n",
     "\n",
+    "    '''\n",
     "    cfg.epoch = 5\n",
     "    trainer = FGM_Trainer(\n",
     "        cfg=cfg,\n",
@@ -747,8 +742,8 @@
     "    )\n",
     "    trainer.logger.info(f\"========== fold: {fold_id} training true==========\")\n",
     "    trainer.fit()\n",
-    "\n",
-    "    best_scores.append(trainer.best_score)\n",
+    "    '''\n",
+    "    best_scores.append(pseudo_labels_trainer.best_score)\n",
     "    break\n"
    ]
   },
